--- a/.github/workflows/text.yml
+++ b/.github/workflows/text.yml
@@ -20,6 +20,6 @@ jobs:
       
       - name: Run add_numbers.py with environment variables and secrets
         env:
-          NUM2: ${{ secrets.NUM2 }}  # Secrets에서 NUM2 가져오기
+          NUM2: ${{ secrets.NUM2 }}  # Secrets에서 NUM2 가져오기!
         run: |
           python add_numbers.py 
